# cassia

./: .gitignore  .gitmodules  README.md
cassia/: CMakeLists.txt
cassia/src/: Cassia.cpp  Cassia.h  CassiaTest.cpp  CommonWGSL.cpp  CommonWGSL.h  EncodingContext.cpp  EncodingContext.h  NaiveComputeRasterizer.cpp  NaiveComputeRasterizer.h  Rasterizer.h  TileWorkgroupRasterizer.cpp  TileWorkgroupRasterizer.h  TileWorkgroupRasterizer2.cpp  TileWorkgroupRasterizer2.h
cassia/tools/: cassia_sim.py
demo/: Cargo.toml  build.rs  capture.ppm  circles.segs  circles.stylings
demo/rive/: filesize.riv
demo/src/: cassia.rs  circles.rs  main.rs  rasterize.wgsl  rive.rs
mold/src/: composition.rs  lib.rs
rive-rs/: Cargo.toml
rive-rs/src/: artboard.rs  backboard.rs  component.rs  component_dirt.rs  container_component.rs  dependency_sorter.rs  draw_rules.rs  draw_target.rs  drawable.rs  dyn_vec.rs  file.rs  layout.rs  lib.rs  node.rs  option_cell.rs  renderer.rs  runtime_header.rs  status_code.rs  transform_component.rs
rive-rs/src/animation/: animation.rs  animator.rs  cubic_interpolator.rs  key_frame.rs  key_frame_color.rs  key_frame_double.rs  key_frame_id.rs  keyed_object.rs  keyed_property.rs  linear_animation.rs  linear_animation_instance.rs  loop.rs  mod.rs
rive-rs/src/bones/: bone.rs  cubic_weight.rs  mod.rs  root_bone.rs  skeletal_component.rs  skin.rs  skinnable.rs  tendon.rs  weight.rs
rive-rs/src/core/: binary_reader.rs  mod.rs  object.rs  property.rs
rive-rs/src/math/: aabb.rs  bezier.rs  color.rs  mat.rs  mod.rs  vec.rs
rive-rs/src/shapes/: clipping_shape.rs  command_path.rs  cubic_asymmetric_vertex.rs  cubic_detached_vertex.rs  cubic_mirrored_vertex.rs  cubic_vertex.rs  ellipse.rs  fill_rule.rs  metrics_path.rs  mod.rs  parametric_path.rs  path.rs  path_composer.rs  path_space.rs  path_vertex.rs  points_path.rs  polygon.rs  rectangle.rs  shape.rs  shape_paint_container.rs  star.rs  straight_vertex.rs  triangle.rs
rive-rs/src/shapes/paint/: blend_mode.rs  color.rs  fill.rs  gradient_stop.rs  linear_gradient.rs  mod.rs  radial_gradient.rs  shape_paint.rs  shape_paint_mutator.rs  solid_color.rs  stroke.rs  stroke_effect.rs  trim_path.rs
surpass/: Cargo.toml
surpass-gpu/: Cargo.toml
surpass-gpu/demo/: Cargo.toml
surpass-gpu/examples/: draw_texture.wgsl  static.rs
surpass-gpu/src/: circles.rs  compact_pixel_segment.rs  draw_texture.wgsl  hardcoded.wgsl  lib.rs  lines.rs  main.rs  paint.wgsl  svg.rs
surpass/src/: extend.rs  layer.rs  lib.rs  point.rs
surpass/src/painter/: buffer_layout.rs  layer_workbench.rs  mod.rs  style.rs
surpass/src/rasterizer/: mod.rs  raster_segment.rs
surpass/src/simd/: avx.rs
