[package]
name = "demo"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
bytemuck = { version = "1", feature = ["derive"] }
dlopen = "0.1"
dlopen_derive = "0.1"
mold = { path = "../mold" }
rand = "0.8"
rive = { path = "../rive-rs" }
structopt = "0.3"

[build-dependencies]
cc = "1"