[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.4", features = ["derive"] }
env_logger = "0.8"
half = "1.8"
mold = { path = "../deps/mold" }
painter = { path = ".." }
png = "0.17"
pollster = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
structopt = "0.3"
svg = "0.5"
svgtypes = "0.4"
wgpu = "0.11"
winit = "0.24"
